completed settings area - may need to adjust sizing on layout buttons on setting views. Next areas JS alert on dashboard, notification icon animation, social icons SVG fixes, adjusting grid layout for desktop AND if I feel like it the bar cut off for traffic chart and try to remove div row selection for hourly, daily, weekly, pie, bar, etc

--- a/css/style.css
+++ b/css/style.css
@@ -127,6 +127,7 @@ input[type=search] {
 ::placeholder {
     color: grey;
     font-family:Georgia, 'Times New Roman', Times, serif;
+    opacity: .5
 }
 
 .traffic h3 {
@@ -137,9 +138,11 @@ input[type=search] {
 .traffic h3,
 .daily h3,
 .mobile h3,
-.social-container,
+.social-container h3,
 .newMembers,
-.newActivity {
+.newActivity,
+.message h3,
+.settings h3 {
     color: grey;
 }
 
@@ -182,7 +185,9 @@ input[type=search] {
 .mobile,
 .social-container,
 .members,
-.recent-activity {
+.recent-activity,
+.message,
+.settings {
     padding-left: 30px;
     padding-right: 30px;
     border-bottom: 1px solid lightgrey;
@@ -309,11 +314,203 @@ svg {
     color: #7377bf;
 }
 
+/* Message User Utility */
+
+.widget-container {
+    display: flex;
+    flex-direction: column;
+}
+.button-primary{
+    font-size: 0.85em;
+    color: white;
+    background-color: #7544e0;
+    text-transform: uppercase;
+    padding: 0.75em 1.5em;
+    border-radius: .75em;
+    display: inline-block;
+    text-decoration: none;
+    margin-top: auto;
+  }
+  
+.button-primary:hover {
+    opacity: 0.5;
+}
+
+
+input[type=text] {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    box-sizing: border-box;
+    border-radius: .25em;
+    border: 1px solid grey;
+  }
+
+  .form-area {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    box-sizing: border-box;
+    border-radius: .25em;
+    border: 1px solid grey;
+    height: 125px;
+  }
+
+/* GRID: Settings Area */
+
+.section-widget {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    max-height: 14em;
+    padding: 10px 5px;
+    font-size: .9em;
+    padding-top: 15px;
+}
+
+.switch1 {
+    grid-column-start: 1;
+    grid-row-start: 1;
+}
+
+.send-email {
+    grid-column-start: 1;
+    grid-row-start: 1;
+}
+
+.switch2 {
+    grid-column-start: 1;
+    grid-row-start: 2;
+}
+
+.send-profile {
+    grid-column-start: 1;
+    grid-row-start: 2;
+}
+
+.send-email,
+.send-profile {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 1em;
+}
+
+.switch1,
+.switch2 {
+    align-self: center;
+    margin-left: 200px;
+    margin-bottom: 13px;
+}
+
+.button-set-primary,
+.button-set-disabled {
+    font-size: 0.85em;
+    color: white;
+    background-color: #7544e0;
+    text-transform: uppercase;
+    padding: 0.75em 1.5em;
+    border-radius: .75em;
+    /* display: inline-block; */
+    text-decoration: none;
+    margin-top: auto;
+}
+
+.button-set-primary {
+    margin-right: 15px;
+}
+
+.button-set-disabled {
+    margin-left: 15px;
+}
+
+.button-set-primary:hover,
+.button-set-disabled:hover {
+    opacity: 0.5;
+}
+
+.form-field {
+    grid-column-start: 1;
+    grid-column-end: 3;
+    width: 100%;
+    height: 2.5em;
+    margin-bottom: 15px;
+    font-size: 1em;
+    color: grey;
+    opacity: .5;
+    margin-top: 10px;
+}
+
+.button-set-primary {
+    grid-column-start: 1;
+    grid-row-start: 4;
+}
+
+.button-set-disabled {
+    grid-column-start: 2;
+    grid-row-start: 4;
+}
+
+/* Code modified based on w3schools how-to area: https://www.w3schools.com/howto/tryit.asp?filename=tryhow_css_switch 
+    Below is for rounded switches
+*/
+.switch {
+    position: relative;
+    display: inline-block;
+    width: 80px;
+    height: 34px;
+  }
+  
+.switch input { 
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+
+.slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    -webkit-transition: .4s;
+    transition: .4s;
+}
+
+.slider:before {
+    position: absolute;
+    content: "";
+    height: 26px;
+    width: 26px;
+    left: 4px;
+    bottom: 4px;
+    background-color: white;
+    -webkit-transition: .4s;
+    transition: .4s;
+}
+  
+input:checked + .slider {
+    background-color: #7544e0;
+}
+   
+input:checked + .slider:before {
+    -webkit-transform: translateX(46px);
+    -ms-transform: translateX(46px);
+    transform: translateX(46px);
+  }
+  
+  /* Rounded sliders */
+.slider.round {
+    border-radius: 34px;
+}
+  
+.slider.round:before {
+    border-radius: 50%;
+}
 
 
 /* Media Queries for larger screens */
 
-@media (min-width: 768px) {
+/* @media (min-width: 768px) {
     .grid-container {
         grid-template-columns: 55px 1fr;
         grid-template-areas:
@@ -321,7 +518,7 @@ svg {
         "nav main";
     }
 
-    /* .main {
+    .main {
         display: grid;
         grid-template-columns: 50%;
     }
@@ -336,7 +533,7 @@ svg {
 
     .mobile, .activity, .settings {
         grid-column: 2 / span 1;
-    } */
+    }
 
     nav {
         padding-top: 25px;
@@ -361,9 +558,9 @@ svg {
 }
 
 @media (min-width: 1024px) {
-    /* .widget-container-full, .widget-container-half {
+    .widget-container-full, .widget-container-half {
         width: 80vw;
-    } */
+    }
 
     .headline {
         text-align: left;
@@ -373,4 +570,4 @@ svg {
     .main-header {
         display: flex;
     }
-}}
+}} */
